# CipherWorks

./: README.md
Client/: Form1.Designer.cs  Form1.cs  Program.cs  workhardd.csproj
Client/Components/: CryptoComponent.cs
Client/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
DLL/: CMakeLists.txt  com_example_demo_NativeCrypto.h  library.cpp  library.h
Server/: pom.xml
Server/src/main/java/com/example/demo/: HttpsController.java  NativeCrypto.java
Server/src/main/resources/: application.properties  keystore.p12
